--- a/index.html
+++ b/index.html
@@ -10,18 +10,17 @@
 <body>
     <div id="app">
         <div class="cointeiner">
-            <div class="selezionata">
-                <img :src="slides[counter].image" alt="">
-                <h2>{{slides[counter].title}}</h2>
-                <p>{{slides[counter].text}}</p>
+            <i class="fas fa-chevron-up frecciaup"></i>
+            <i class="fas fa-chevron-down frecciadown"></i>
+            <div class="selectedImage">
+                <img class="imgone " :src="slides[counter].image" alt="">
+                <h2 class="titolo" >{{slides[counter].title}}</h2>
+                <p class="sottotitolo">{{slides[counter].text}}</p>
             </div>
-            <div class="sequenza">
-                <ul>
-                    <li v-for="slide in slides">
-                        <img :src="slide.image" alt="">
-                    </li>
-                </ul>
-
+            <div class="listImage">
+                <div class="images" v-for="slide in slides">
+                   <img class="imgstyle" :src="slide.image" alt="">
+                </div>
             </div>
         
         </div>
