--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./asset/css/style.css">
     <title>Slider</title>
 </head>
 <body>
     <div id="app">
         <div class="cointeiner">
-            <i class="fas fa-chevron-up frecciaup"></i>
-            <i class="fas fa-chevron-down frecciadown"></i>
+            <i @click="clickUp" class="fas fa-chevron-up frecciaup" ></i>
+            <i @click="clickDown" class="fas fa-chevron-down frecciadown"></i>
             <div class="selectedImage">
                 <img class="imgone " :src="slides[counter].image" alt="">
                 <h2 class="titolo" >{{slides[counter].title}}</h2>
